# kookaburra-cut

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-MIT  NOTICE.md  README.md  SECURITY.md  biome.json  editor.html  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  present.html  settings.html  tsconfig.json  vite.config.ts
.design-sync/: NOTES.md  config.json  conventions.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
docs/: README.md  architecture.md  backgrounds.md  decisions.md  design.md  determinism.md  overlays.md  voice.md
patches/: troika-three-text@0.52.4.patch
projects/: README.md
scripts/: blender-export-glb.py  blender-inspect-model.py  blender-render-glb-check.py  blender-render-preview.py  build-ffmpeg-sidecar.sh  dump-glb-materials.mjs  exr-to-hdr.py  gate.sh  generate-tap-dot.mjs  kookaburra-run.sh  make-dmg.sh  make-icons.sh  make-placeholder-phone.py  prepare-android-model.py  prepare-android-model.sh  prepare-device-model.sh  prepare-emoji-fonts.mjs  prepare-hdri.sh  prepare-phone-model.sh  prepare-text3d-font.mjs  release.sh  render-android-previews.py  render-device-previews.sh  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  editor.json  present.json  settings.json
src-tauri/icons/: icon.icns
src-tauri/src/: concurrency.rs  edit.rs  encode.rs  export_presets.rs  fonts.rs  global_screenshots.rs  gradients.rs  lib.rs  loudness.rs  main.rs  media.rs  objects.rs  present.rs  pty.rs  scene_doc.rs  settings_win.rs  tap_dot_frames.generated.rs  theme.rs  updater.rs  workspace.rs
src-tauri/templates/: project-CLAUDE.md  project-claude-settings.json
src-tauri/templates/scenes/: appversion.tsx.tmpl  blank.tsx.tmpl  device.tsx.tmpl  layeredscreenshot.tsx.tmpl  title.tsx.tmpl  video.tsx.tmpl
(+655 files in other folders)
