[package]
name = "kookaburra-cut"
version = "0.3.0"
description = "Local deterministic animated-video studio"
authors = ["Michael Palmes"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/michael-palmes/kookaburra-cut"
homepage = "https://kookaburracut.com/"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "kookaburra_cut_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
# protocol-asset: workspace/caches load in the webview as asset: URLs (v9 · M2).
tauri = { version = "2.11.3", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
trash = "5"
tokio = { version = "1", features = ["full"] }
sha2 = "0.11"
portable-pty = "0.9"
# v10 · M6: static-instances variable fonts at pin time (fonts.rs). Exact-pinned —
# instancer output bytes participate in export baselines (rebase discipline).
allsorts = "=0.17.0"
libc = "0.2"

# macOS-only: reach the real NSMenuItem to set a true SF Symbol on the Settings
# menu entry (Tauri/muda's NativeIcon can't reference systemSymbolName images).
# Versions match the ones already in tauri's own dependency tree.
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"
core-text = "22.0.0"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
  "NSApplication",
  "NSResponder",
  "NSMenu",
  "NSMenuItem",
  "NSImage",
  "NSColor",
] }
objc2-foundation = "0.3"
